--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                   <h4>SHOHAIL JAVEED</h4>
                   <span>Software Developer</span>
                   <p class="text-capitalize">
-                    Shohail is a Data Scientist, Senior Engineer & Developer. Possessing overall 6 yrs of work experience, his core competencies are ETL Development, Data Architecture, IT Training, Robotics and Automation and Data Science.
+                    Sohail is a Data Scientist, Senior Engineer & Developer. Possessing overall 6 yrs of work experience, his core competencies are ETL Development, Data Architecture, IT Training, Robotics and Automation and Data Science.
                   </p>
                   <div class="social">
                     <a href=""><i class="ri-twitter-fill"></i></a>
